feat: tudo pronto

--- a/src/app/components/projetos/projetos.component.html
+++ b/src/app/components/projetos/projetos.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" id="projetos">
     <div class="d-flex justify-content-center">
         <div class="title">
             PROJETOS
@@ -9,63 +9,78 @@
     <div class="content_projeto">
         <div>
             <div class="title-project">TCC Cotil</div>
-            <div class="card-projeto">
-                <div class="back-img">
-                    <img src="../assets/imgcode.png" alt="">
+            <a href="https://github.com/NelsonModenezNeto/Parque-Computacional" target="_blank" class="card-projeto-link">
+                <div class="card-projeto">
+                    <div class="back-img">
+                        <img src="../assets/imgtcc.png" alt="TCC Cotil">
+                    </div>
+                    <div class="loading-border"></div>
                 </div>
-                <div class="loading-border"></div>
+            </a>
+            <div class="description">
+                <div class="lembrete">* Clique no projeto para ir ao Repositório para mais informações</div>
+                <div class="state">Pronto</div>
             </div>
-            <div class="lembrete">* Clique no projeto para ir ao Repósitorio para mais informações</div>
         </div>
         <div>
-            <div class="title-project">TCC Cotil</div>
+            <div class="title-project">Gerenciamento de Estoque</div>
+
             <div class="card-projeto">
                 <div class="back-img">
-                    <img src="../assets/imgcode.png" alt="">
+                    <img src="../assets/imgger.png" alt="Gerenciamento de Estoque">
                 </div>
                 <div class="loading-border"></div>
             </div>
-            <div class="lembrete">* Clique no projeto para ir ao Repósitorio para mais informações</div>
+
+            <div class="description">
+                <div class="lembrete">* Repositório ainda não está disponível</div>
+                <div class="state">Em andamento</div>
+            </div>
         </div>
         <div>
-            <div class="title-project">TCC Cotil</div>
-            <div class="card-projeto">
-                <div class="back-img">
-                    <img src="../assets/imgcode.png" alt="">
+            <div class="title-project">Pagamento Electron</div>
+            <a href="https://github.com/NelsonModenezNeto/ElectronPagamento" target="_blank" class="card-projeto-link">
+                <div class="card-projeto">
+                    <div class="back-img">
+                        <img src="../assets/imgelectron.png" alt="Pagamento Electron">
+                    </div>
+                    <div class="loading-border"></div>
                 </div>
-                <div class="loading-border"></div>
+            </a>
+            <div class="description">
+                <div class="lembrete">* Clique no projeto para ir ao Repositório para mais informações</div>
+                <div class="state">Pronto</div>
             </div>
-            <div class="lembrete">* Clique no projeto para ir ao Repósitorio para mais informações</div>
         </div>
         <div>
-            <div class="title-project">TCC Cotil</div>
-            <div class="card-projeto">
-                <div class="back-img">
-                    <img src="../assets/imgcode.png" alt="">
+            <div class="title-project">Site CDI</div>
+            <a href="https://github.com/gabriellytegon/Site-CDI" target="_blank" class="card-projeto-link">
+                <div class="card-projeto">
+                    <div class="back-img">
+                        <img src="../assets/imgcdi.png" alt="Site CDI">
+                    </div>
+                    <div class="loading-border"></div>
                 </div>
-                <div class="loading-border"></div>
+            </a>
+            <div class="description">
+                <div class="lembrete">* Clique no projeto para ir ao Repositório para mais informações</div>
+                <div class="state">Pronto</div>
             </div>
-            <div class="lembrete">* Clique no projeto para ir ao Repósitorio para mais informações</div>
         </div>
         <div>
-            <div class="title-project">TCC Cotil</div>
-            <div class="card-projeto">
-                <div class="back-img">
-                    <img src="../assets/imgcode.png" alt="">
+            <div class="title-project">Pagamento C#</div>
+            <a href="https://github.com/NelsonModenezNeto/ProjetoC" target="_blank" class="card-projeto-link">
+                <div class="card-projeto">
+                    <div class="back-img">
+                        <img src="../assets/imgpag.png" alt="Pagamento C#">
+                    </div>
+                    <div class="loading-border"></div>
                 </div>
-                <div class="loading-border"></div>
+            </a>
+            <div class="description">
+                <div class="lembrete">* Clique no projeto para ir ao Repositório para mais informações</div>
+                <div class="state">Pronto</div>
             </div>
-            <div class="lembrete">* Clique no projeto para ir ao Repósitorio para mais informações</div>
-        </div>
-        <div>
-            <div class="title-project">TCC Cotil</div>
-            <div class="card-projeto">
-                <div class="back-img">
-                    <img src="../assets/imgcode.png" alt="">
-                </div>
-                <div class="loading-border"></div>
-            </div>
-            <div class="lembrete">* Clique no projeto para ir ao Repósitorio para mais informações</div>
         </div>
     </div>
 </div>
