--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -5,18 +5,19 @@
 }
 
 
-.welcome{
-    font-family: "Anton" ;
+.welcome {
+    font-family: "Anton";
     font-size: 100px;
     background-image: linear-gradient(to right, #fb30d0, #944dc7, #7cedfe);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}	
-.imgBanner{
+}
+
+.imgBanner {
     width: 550px;
-    height: 550px!important;
- 
+    height: 550px !important;
+
 }
 
 .blur-strip {
@@ -42,57 +43,39 @@
 }
 
 
-@media (max-width: 1350px) {
-    .imgBanner{
-        width: 400px;
-        height: 400px!important;
-    }
-}
 
-@media (max-width: 992px) {
-    .welcome{
-        margin-top: 5vh;
-        font-size: 12vh;
-        display: flex;
-        justify-content: center;
-        justify-self: center;
-    }
-    .imgBanner{
-        width: 300px;
-        height: 300px!important;
-    }
-    .spacex{
-        margin-bottom: 30vh;
-    }
-}
 
-@media (max-width: 735px) {
-    .welcome{
-        font-size: 8vh;
+@media screen and (max-width: 800px) {
+    .welcome {
+        font-size: 55px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
-    .imgBanner{
+
+    .imgBanner {
         width: 230px;
-        height: 230px!important;
+        height: 230px !important;
     }
+
+    .strip-top {
+        top: 15%;
+        right: 15%;
+    }
+
+    .strip-bottom {
+        bottom: 45%;
+        left: 15%;
+    }
+
 
 }
 
-@media (max-width: 500px) {
-    .welcome{
-        font-size: 38px;
-    }
-    .imgBanner{
-        width: 160px;
-        height: 160px!important;
-    }
 
-}
-
-#myVideo{
+#myVideo {
     width: 100px;
 }
 
-.boton{
+.boton {
     height: 5vh;
     border: 0px;
     border-radius: 5px;
@@ -100,9 +83,9 @@
     color: white;
     font-size: 16px;
     font-weight: bold;
-    
+
 }
 
-.boton:hover{
+.boton:hover {
     background: linear-gradient(to right, #ec2dc2, #8345b0, #67c6d4);
 }
