--- a/src/app/components/carrosel/carrosel.component.css
+++ b/src/app/components/carrosel/carrosel.component.css
@@ -32,3 +32,11 @@
     margin-right: 40px;
     filter: invert(1);
 }
+
+
+@media screen and (max-width: 800px) {
+    .tecnology {
+        width: 40px;
+        height: 40px;
+    }
+}
