--- a/src/app/components/grade/grade.component.css
+++ b/src/app/components/grade/grade.component.css
@@ -19,26 +19,31 @@
 }
 
 .card_grade {
+    width: 150px;
+    height: 150px;
     text-align: center;
     opacity: 0; 
-    animation: slideUp 0.5s forwards; 
+
 }
 
+.card_grade.animated { 
+    animation: slideUp 1.7s forwards; 
+}
 
 .card_grade:nth-child(1) {
-    animation-delay: 0.2s;
-}
-
-.card_grade:nth-child(2) {
     animation-delay: 0.4s;
 }
 
+.card_grade:nth-child(2) {
+    animation-delay: 0.8s;
+}
+
 .card_grade:nth-child(3) {
-    animation-delay: 0.6s;
+    animation-delay: 1.2s;
 }
 
 .card_grade:nth-child(4) {
-    animation-delay: 0.8s;
+    animation-delay: 1.6s;
 }
 
 .title {
