--- a/src/app/components/projetos/projetos.component.css
+++ b/src/app/components/projetos/projetos.component.css
@@ -2,7 +2,7 @@
     color: white;
     font-size: 60px;
     font-weight: 700;
-    margin-top: 70px;
+    margin-top: 120px;
 
 }
 
@@ -42,14 +42,14 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 50px;
 }
 
 .card-projeto {
     position: relative;
-    background-color: rgb(24, 24, 24);
-    width: 400px;
+    background-color: rgb(35, 35, 35);
+    width: 500px;
     height: 300px;
     border-radius: 20px;
     overflow: hidden;
@@ -59,12 +59,13 @@
 .card-projeto:hover {
     transform: translateY(-10px);
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
 
 .back-img {
     position: absolute;
-    background-color: rgb(31, 31, 31);
-    width: 400px;
+    background-color: rgb(45, 45, 45);
+    width: 500px;
     height: 300px;
     border-radius: 5px;
     bottom: -45px;
@@ -76,6 +77,8 @@
     box-shadow: -13px -13px 14px -18px rgba(0, 0, 0, 0.75);
 
     img {
+        width: 100%;
+        height: 93%;
         border-radius: 5px;
         box-shadow: -14px -14px 14px -18px rgba(0, 0, 0, 0.75);
     }
@@ -88,15 +91,15 @@
 
 .loading-border {
     position: absolute;
-    top: -5px;
-    left: -8px;
-    width: 208px;
-    height: 155px;
+    top: -6px;
+    left: -12px;
+    width: 262px;
+    height: 156px;
     border: 10px solid rgba(52, 133, 157, 0.8);
-    border-top-color: #944dc7;
-    border-bottom-color: #944dc7;
-    border-left-color: #944dc7;
-    border-right-color: #944dc7;
+    border-top-color: #7cedfe;
+    border-bottom-color: #7cedfe;
+    border-left-color: #7cedfe;
+    border-right-color: #7cedfe;
     border-radius: 0px;
     box-sizing: border-box;
     transform: scale(1.0);
@@ -126,21 +129,64 @@
 }
 
 .title-project {
-    width: 100%;
-    font-size: 30px;
+    font-size: 25px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     color: rgb(221, 221, 221);
     font-weight: 700;
     text-align: center;
-    border: 1px solid rgb(54, 54, 54);
+    /* border: 1px solid rgb(54, 54, 54);
     border-bottom: 0;
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-right-radius: 10px; */
 }
 
+.description {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+    margin-bottom: 70px;
+}
 
-.lembrete{
+.lembrete {
     font-size: 11px;
-    color: rgb(221, 221, 221);
+    color: rgb(196, 196, 196);
     font-weight: 700;
-    margin-bottom: 40px;
+}
+
+.state {
+    font-size: 11px;
+    color: rgb(196, 196, 196);
+    font-weight: 700;
+}
+
+@media screen and (max-width: 800px) {
+    .title {
+        font-size: 45px;
+    }
+
+    .card-projeto {
+        width: 320px;
+        height: 200px;
+    }
+
+    .back-img{
+        width: 320px;
+        height: 200px;
+    }
+    .lembrete {
+        font-size: 8px;
+    }
+
+    .state {
+        font-size: 8px;
+    }
+    .loading-border {
+        position: absolute;
+        top: -4px;
+        left: -7px;
+        width: 167px;
+        height: 104px;
+    }
+    
 }
