--- a/src/app/components/sobre-mim/sobre-mim.component.html
+++ b/src/app/components/sobre-mim/sobre-mim.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5" id="sobre">
     <div class="row justify-content-center align-items-center">
         <div class="content_sobre">
             <div class="col-lg-5 col-md-12 d-flex justify-content-center part1">
