fix: vercel insights

--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -58,16 +58,12 @@
     }
 
     .strip-top {
-        top: 15%;
-        right: 15%;
+        display: none;
     }
 
     .strip-bottom {
-        bottom: 45%;
-        left: 15%;
+        display: none;
     }
-
-
 }
 
 
